<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, UsbActivity!</string>
    <string name="app_name">Arduino Terminal</string>
    <string name="starter_app_name">Start Arduino Service</string>
    <string name="main_menu_connect_name">Connect</string>
    <string name="main_menu_reconnect_name">Reconnect</string>
    <string name="main_menu_settings_name">Settings</string>
    <string name="main_menu_exit_name">Exit</string>
    <string name="ok_string">OK</string>
    <string name="cancel_string">Cancel</string>
    <string name="connect_dialog_title">Connect to USB</string>
    <string name="no_usb_devices_attached_message">No USB devices are currently attached</string>
    <string name="no_permissions_for_this_usb_device_message">No permissions to connect to USB device</string>
    <string name="connected_to_usb_device_message">Connected to USB device</string>
    <string name="disconnected_from_usb_device_message">Disconnected from USB device</string>
    <string name="wait_dialog_title">Connecting to </string>
    <string name="wait_dialog_message">Please wait...</string>
    <string name="connect_fail_message">Fail to connect to </string>
    <string name="terminal_activity_name">Commands</string>
    <string name="terminal_activity_title">Send Command to:</string>
    <string name="terminal_activity_clear">Clear</string>
    <string name="terminal_activity_send">Send</string>
    <string name="usb_device_attached">USB device attached</string>
    <string name="usb_device_detached">USB device detached</string>
    <string name="prefix_out">&lt; </string>
    <string name="prefix_in">&gt; </string>
    <string name="pref_category_display_key">arduino_terminal_category_display</string>
    <string name="pref_category_display_title">Display Preferences</string>
    <string name="pref_category_application_key">arduino_terminal_category_application</string>
    <string name="pref_category_application_title">Application Preferences</string>
    <string name="pref_font_size_key">arduino_terminal_font_size</string>
    <string name="pref_font_size_title">Font Size</string>
    <string name="pref_font_size_summary">Set display font size</string>
    <string name="pref_font_size_default">13</string>
    <string name="pref_font_typeface_key">arduino_terminal_font_typeface</string>
    <string name="pref_font_typeface_title">Font Type</string>
    <string name="pref_font_typeface_summary">Set display font type</string>
    <string name="pref_font_typeface_default">Monospace</string>
    <string name="pref_display_colors_key">arduino_terminal_display_colors</string>
    <string name="pref_display_colors_title">Display Colors</string>
    <string name="pref_display_colors_summary">Set display colors: font and background</string>
    <string name="pref_display_colors_default">Black on White</string>
    <string name="pref_display_orientation_key">arduino_terminal_display_orientation</string>
    <string name="pref_display_orientation_title">Display Orientation</string>
    <string name="pref_display_orientation_summary">Set orientation of the display</string>
    <string name="pref_display_orientation_default">Portrait</string>
    <string name="pref_close_on_detach_key">arduino_terminal_close_on_detach</string>
    <string name="pref_close_on_detach_title">Exit on USB Detach</string>
    <string name="pref_close_on_detach_summary">Close application when USB device is detached</string>
    <string name="pref_local_echo_key">arduino_terminal_local_echo</string>
    <string name="pref_local_echo_title">Local Echo</string>
    <string name="pref_local_echo_summary">Show user input on the display</string>
    <string name="pref_clear_action_key">arduino_terminal_clear_action</string>
    <string name="pref_clear_action_title">Action on Clear</string>
    <string name="pref_clear_action_summary">What to do when "Clear" button is pressed</string>
    <string name="pref_clear_action_default">Clear Display</string>
    <string name="pref_show_keyboard_key">arduino_terminal_show_keyboard</string>
    <string name="pref_show_keyboard_title">Show Keyboard</string>
    <string name="pref_show_keyboard_summary">Always show keyboard when input field is shown</string>
    <string name="pref_show_keyboard_default">false</string>
    <string name="pref_keyboard_type_key">arduino_terminal_keyboard_type</string>
    <string name="pref_keyboard_type_title">Keyboard Type</string>
    <string name="pref_keyboard_type_summary">Set type of keyboard used for input</string>
    <string name="pref_keyboard_type_default">1</string>
    <string name="pref_show_messages_key">arduino_terminal_show_messages</string>
    <string name="pref_show_messages_title">Show Messages</string>
    <string name="pref_show_messages_summary">Show application messages on the display</string>
    <string name="pref_show_messages_default">22</string>
</resources>
